# Carrier

./: .gitignore  .ivaldiignore  Cargo.toml  README.md  benchmark-compare.sh  benchmark-enhanced.sh  benchmark_results_20250930_091201.txt  build.rs  carrier.sh  setup.sh  test-auth.sh
.cargo/: config.toml.bak
.github/workflows/: release.yml
benchmarking/: benchmark-compare.sh  benchmark-enhanced.sh  benchmark_results_20250929_084105.txt  benchmark_results_20251001_141403.txt  benchmark_results_20251001_142224.txt  benchmark_results_20251001_234559.txt  benchmark_results_20251002_010400.txt  benchmarking.md
docs/: PERFORMANCE_IMPROVEMENTS.md  commands.md  device-setup.md  getting-started.md  info.md  installation.md  networking.md  performance.md  rootless-architecture.md  rootless.md  runtime.md  shell.md  stop.md  storage.md  terminal.md
macos/: Carrier.entitlements  sign.sh
src/: main.rs
src/backend/: mod.rs  vm.rs
src/cli/: cli.rs  mod.rs
src/commands/: commands.rs  mod.rs
src/engine/: linux.rs  mac.rs  mod.rs
src/runtime/: cgroups.rs  container.rs  mod.rs  namespaces.rs  network.rs  oci_spec.rs  process.rs  security.rs
src/storage/: layer.rs  layout.rs  mod.rs  overlay.rs
vmagent/: Cargo.toml  build.sh
vmagent/src/: main.rs
