[package]
name = "carrier"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.2"
futures-util = "0.3"
indicatif = "0.18.0"
lazy_static = "1.5.0"
nix = { version = "0.30.1", features = ["mount", "user", "process", "sched", "signal", "fs", "hostname"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["blocking", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tokio = { version = "1", features = ["full"] }
# Runtime dependencies
caps = "0.5"
libc = "0.2"
procfs = "0.16"
sha2 = "0.10"
hex = "0.4"
regex = "1"
portable-pty = "0.8"
scopeguard = "1.2"

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
# Suppress warnings in dev builds
# Uncomment the next line to disable warnings
# rustflags = ["-A", "warnings"]

[profile.release]
# Release builds are already optimized
lto = true
codegen-units = 1
opt-level = 3
