[package]
name = "carrier"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0.0"
flate2 = "1.1.2"
futures-util = "0.3"
indicatif = "0.18.0"
lazy_static = "1.5.0"
# nix: Linux-only mount/sched features are gated to the Linux target so the
# crate still builds on macOS (which routes containers through the VM backend).
# ponytail: macOS keeps the cross-platform nix items (signal/user/fs); the
# Linux-only mount+sched live in the target block below.
nix = { version = "0.30.1", default-features = false, features = ["user", "process", "signal", "fs", "hostname"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["blocking", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tokio = { version = "1", features = ["full"] }
# Runtime dependencies
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
portable-pty = "0.8"
scopeguard = "1.2"
rpassword = "7.0"
base64 = "0.22"

# Linux-only runtime bits. The nix `mount` feature only compiles on Linux, so it
# lives here; Cargo unions it with the cross-platform nix features above when
# building for Linux, and omits it entirely on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", default-features = false, features = ["mount"] }

# macOS-only: drive Apple's built-in Virtualization.framework from pure Rust to
# boot the bundled Linux micro-VM. No Swift toolchain, no extra app.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-virtualization = "0.3"
block2 = "0.6"
dispatch2 = "0.3"

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
# Suppress warnings in dev builds
# Uncomment the next line to disable warnings
# rustflags = ["-A", "warnings"]

[profile.release]
# Release builds are already optimized
lto = true
codegen-units = 1
opt-level = 3
